# TurnLab

./: .gitignore  AppImageBuilder.yml  ArchitectureDocument.md  CMakeLists.txt  FeaturesSpecification.md  README.md  conandata.yml  resources.qrc
.github/workflows/: build-linux.yml
post-processors/: fanuc_0t.py  generic_iso.py  haas_st_series.py  mazak_quick_turn.py
src/: main.cpp
src/gui/: MainWindow.cpp  MainWindow.h
src/model/: MachineConfig.h  Project.h  StockMaterial.h  Tool.h
src/model/geometry/: Geometry.cpp  Geometry.h  Line.cpp  Line.h  Point.cpp  Point.h  Segment.h  Transform.cpp  Transform.h  Vector.cpp  Vector.h
src/model/operation/: OperationConfiguration.h
src/model/toolpath/: TLine.h  TPoint.h  TToolpath.h  TToolpathSequence.h  Toolpath.h
src/presenter/: DXFImportPresenter.cpp  DXFImportPresenter.h  MachineConfigPresenter.cpp  MachineConfigPresenter.h  MainPresenter.cpp  MainPresenter.h  OperationConfigurationPresenter.cpp  OperationConfigurationPresenter.h
src/presenter/operation/: FacingOperationPresenter.cpp  FacingOperationPresenter.h  PartingOperationPresenter.cpp  PartingOperationPresenter.h  TurningOperationPresenter.cpp  TurningOperationPresenter.h
src/presenter/tool/table/: ToolTablePresenter.cpp  ToolTablePresenter.h
src/utils/: ConfigurationManager.cpp  ConfigurationManager.h  DXFUtils.cpp  DXFUtils.h  GeometryUtils.cpp  GeometryUtils.h  ProjectUtils.cpp  ProjectUtils.h
src/utils/postprocessor/: PythonPostProcessor.cpp  PythonPostProcessor.h  python_bindings.cpp  python_bindings.h
src/utils/toolpath/: ToolpathGenerator.cpp  ToolpathGenerator.h
src/view/: DXFImportDialog.cpp  DXFImportDialog.h  GeometryView.cpp  GeometryView.h  LeftPanel.cpp  LeftPanel.h  MachineConfigDialog.cpp  MachineConfigDialog.h  MainWindow.cpp  MainWindow.h  OperationConfigurationPlotHelper.cpp  OperationConfigurationPlotHelper.h  OperationConfigurationView.cpp  OperationConfigurationView.h  ToolTableDialog.cpp  ToolpathPlotter.cpp  ToolpathPlotter.h
src/view/tooltable/: ToolTableDialog.cpp  ToolTableDialog.h
test/: CMakeLists.txt  DXFUtilsTest.cpp  LineTest.cpp  PointTest.cpp  VectorTest.cpp
test/data/: Lines.dxf
